# OpenGLSample

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/peter/openglsample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  EglThread.cpp  EglThread.h  native-lib.cpp
app/src/main/cpp/egl/: EglHelper.cpp  EglHelper.h  EglThread.cpp  EglThread.h
app/src/main/cpp/matrix/: MatrixUtil.h
app/src/main/cpp/opengl/: BaseOpenGL.cpp  BaseOpenGL.h  FilterOne.cpp  FilterOne.h  MyOpenGL.cpp  MyOpenGL.h
app/src/main/cpp/utils/: AndroidLog.h  ShaderUtil.h
app/src/main/java/com/peter/openglsample/: MainActivity.java
app/src/main/java/com/peter/openglsample/opengl/: MySurfaceView.java  NativeOpenGL.java  NativeOpenGl.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/peter/openglsample/: ExampleUnitTest.java
